# arcontia_barcode_library

./: README.md
lib/: CMakeLists.txt
lib/src/: Arcontia_BarcodeScanner.cpp  Barcodes.cpp
lib/src/include/: ArcbSerialCommunication.h  Arcontia_BarcodeScanner.h  IArcbSerialCommunication.h
lib/test/: CMakeLists.txt
lib/test/src/: test_IBarcodeScanner.cpp
